--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,11 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
+    <input type="text" name="firstName" />
+    <input type="text" name="lastName" />
     <input type="email" name="email" />
+    <input type="text" name="phone" />
+    <input type="text" name="location" />
     <textarea name="message"></textarea>
   </form>
 </body>
