--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="The Wall Flower Company - Flower Walls available to Hire"
+      content="The Wall Flower Company - Flower Walls available to hire throughout South, East and West Wales."
     />
     <meta
       name="keywords"
@@ -35,7 +35,7 @@
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>S
     <div id="root"></div>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="firstName" />
