--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>The Wall Flower Company</title>
-    <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="The Wall Flower Company - Flower Walls available to hire throughout South, East and West Wales."
-    />
-    <meta
-      name="keywords"
-      content="flowers, flower, flowerWall, wallFlower, walls, rent, hire, decoration, tea, letterbox, Wales, UK, event, "
-    />
-    <meta name="author" content="Cristiana Monteiro" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+<head>
+  <title>The Wall Flower Company</title>
+  <meta name="title" content="The Wall Flower Company">
+  <meta charset="utf-8" />
+  <meta name="description"
+    content="The Wall Flower Company - Flower Walls available to hire throughout South, East and West Wales." />
+  <meta name="keywords"
+    content="flowers, flower, flowerWall, wallFlower, walls, rent, hire, decoration, tea, letterbox, Wales, UK, event" />
+  <meta property="og:title" content="The Wall Flower Company">
+  <meta property="og:description"
+    content="The Wall Flower Company - Flower Walls available to hire throughout South, East and West Wales.">
+  <meta property="og:image" content="https://thewallflowercompany.co.uk/static/media/whiteWallChild.733d9d7f.jpg">
+  <meta property="og:url" content="https://thewallflowercompany.co.uk">
+  <meta name="author" content="Cristiana Monteiro" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="firstName" />
-      <input type="text" name="lastName" />
-      <input type="email" name="email" />
-      <input type="text" name="phone" />
-      <input type="text" name="location" />
-      <textarea name="message"></textarea>
-    </form>
-  </body>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z9GDHCR3WX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-Z9GDHCR3WX');
+  </script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="firstName" />
+    <input type="text" name="lastName" />
+    <input type="email" name="email" />
+    <input type="text" name="phone" />
+    <input type="text" name="location" />
+    <textarea name="message"></textarea>
+  </form>
+</body>
+
 </html>
